Tue Jun 29 18:18:56 UTC 2010  Chris Cleeland  <cleeland@ociweb.com>

        * modules/TemplateParser.pm: split_parameters() was returning an
        empty parameter.  This should fix errant extra whitespace
        generated in bmake test output.

Tue Jun 29 14:45:21 UTC 2010  Chris Cleeland  <cleeland@ociweb.com>

        * templates/cdt6platforms.mpt:
        * templates/cdt6dll.mpt:
        * templates/cdt6lib.mpt:
        * templates/cdt6exe.mpt:

          Added missing dollar-Id-dollar to correct fuzz errors.

Tue Jun 29 13:41:39 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * devtools/document_template.pl:

          Fixed the usage message.

Mon Jun 28 20:16:54 UTC 2010  Chris Cleeland  <cleeland@ociweb.com>

        * modules/CDT6ProjectCreator.pm:
        * modules/CDT6WorkspaceCreator.pm:
        * templates/cdt6platforms.mpt:
        * templates/cdt6cproject.mpd:
        * templates/cdt6dll.mpt:
        * templates/cdt6lib.mpt:
        * templates/cdt6exe.mpt:
        * templates/cdt6project.mpd:

          Merged in initial EXPERIMENTAL release of CDT6 project
          type generation from the "eclipse" branch.

        * docs/html/CDT6.html:
        * docs/templates/cdt6project.txt:
        * docs/templates/cdt6cproject.txt:

          Draft documentation on the project type.

        * config/global.mpb:

          Modification to allow specification of threads.

        * devtools/document_template.pl:

          Modified to allow use for generating a stubbed out template
          variable document.

        * modules/TemplateParser.pm:

          Added functions create_aux_file/end_aux_file, translate_vars,
          and convert_slashes.

Mon Jun 28 18:01:08 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * modules/WorkspaceCreator.pm:

          Reverted change below.

Mon Jun 28 16:26:00 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * modules/WorkspaceCreator.pm:
